--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ align-items: center;
 .LB{
     display: flex;
     justify-content: center;
-    padding: 130px;
+    padding: 130px 
     /* align-items: center; */
 
     /* padding:100px 30px; */
